--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           </div>
           <div class="col-lg-4 mt-5 mt-lg-0 text-center" data-aos="zoom-in" data-aos-delay="300">
             <div class="hero-image-container">
-              <img src="../405928970_1760994694323868_2064040648021159844_n.png" class="img-fluid rounded-4 shadow-lg hero-illustration" alt="Developer at workstation illustration" loading="lazy" />
+              <img src="profilImg.png" class="img-fluid rounded-4 shadow-lg hero-illustration" alt="Developer at workstation illustration" loading="lazy" />
               <div class="hero-image-glow"></div>
             </div>
           </div>
@@ -137,7 +137,7 @@
         <div class="row g-4 align-items-center">
           <div class="col-md-5" data-aos="zoom-in" data-aos-duration="1000">
             <div class="about-image-container">
-              <img src="../405928970_1760994694323868_2064040648021159844_n.png" class="img-fluid rounded-4 shadow about-photo" alt="Sayed Sherif portrait" loading="lazy" />
+              <img src="profilImg.png" class="img-fluid rounded-4 shadow about-photo" alt="Sayed Sherif portrait" loading="lazy" />
               <div class="about-image-overlay">
                 <div class="overlay-content">
                   <i class="fa-solid fa-code fa-2x text-white"></i>
@@ -699,5 +699,6 @@
     <script src="main.js"></script>
   </body>
 </html>
+
 
 
